openshift-cel/check-routes/.chainsaw-test/route-bad.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift-http
spec:
  host: hello-openshift-hello-openshift.mydomain
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-openshift
---
