openshift-cel/check-routes/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-routes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-routes.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: route-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: route-bad.yaml
